--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
+    "@next/font": "^14.2.15",
     "@tanstack/react-query": "^5.59.20",
     "@vitejs/plugin-react": "^4.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "graphql": "^16.9.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
