--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
     "@vitejs/plugin-react": "^4.3.3",
     "class-variance-authority": "^0.7.0",
