--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
     "@vitejs/plugin-react": "^4.3.3",
@@ -25,6 +26,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
