--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "prepare": "husky install"
+    "format:check": "prettier --check .",
+    "prepare": "husky install",
+    "check": "npm run lint && npm run format:check",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
@@ -42,6 +45,7 @@
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
