--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
     "check": "npm run lint && npm run format:check",
     "type-check": "tsc --noEmit"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@next/font": "^14.2.15",
