--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,10 +1,9 @@
 {
   "*.{js,jsx,ts,tsx}": [
     "prettier --write",
-    "eslint --fix",
-    "vitest related --run"
+    "eslint --fix"
   ],
-  "*.{json,md,yml,yaml}": [
+  "*.{json,css,md}": [
     "prettier --write"
   ]
 }
